--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a href="#">Services</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -34,7 +34,12 @@
  </header>
  <section id="main-image">
     <div id="tailor-image"></div>
-    <div id="welcome"></div>
+    <div id="welcome">
+        <h1>Welcome</h1>
+        <h3> Lamad Tailor is a full service alterations company that specializes in wedding, pageant and prom attire. 
+         We are the #1 choice of DFW brides and Most Ukrainian and Russian ladies that flee their countries from the war. </h3>
+        <!-- <br> With over 30 years of experience, we offer complete and custom bead work and embellishments on all types of evening gowns, wedding dresses, and both men’s and women’s formal wear.</h3> -->
+    </div> 
  </section>
  <section id="works">
     <div class="content">
