--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <a href="index.html" class="active">Home</a>
                 </li>
                 <li>
-                    <a href="#">About</a>
+                    <a href="about.html">About</a>
                 </li>
                 <li>
                     <a href="#">Services</a>
@@ -36,9 +36,11 @@
     <div id="tailor-image"></div>
     <div id="welcome">
         <h1>Welcome</h1>
+       <div class="mytext">
         <h3> Lamad Tailor is a full service alterations company that specializes in wedding, pageant and prom attire. 
-         We are the #1 choice of DFW brides and Most Ukrainian and Russian ladies that flee their countries from the war. </h3>
-        <!-- <br> With over 30 years of experience, we offer complete and custom bead work and embellishments on all types of evening gowns, wedding dresses, and both men’s and women’s formal wear.</h3> -->
+            We are the #1 choice of DFW brides and Most Ukrainian and Russian ladies that flee their countries from the war. </h3>
+       </div>
+        
     </div> 
  </section>
  <section id="works">
