Add caret go to top element

--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,8 @@
             </nav>
         </div>
     </header>
+    <a href="#top" id="top"><span class="move_to_top"><i class="fas fa-caret-up"></i></span></a>
+    <a name="top" id="off"></a>
     <section class="tailor">
         <div id="contact-image"></div>
         <h1 id="info">Contact us</h1>
