--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         </nav>
     </div>
  </header>
+ <a href="#top" id="top"><span class="move_to_top"><i class="fas fa-caret-up"></i></span></a>
+ <a name="top" id="off"></a>
  <section id="main-image">
     <div id="tailor-image"></div>
     <div id="welcome">
@@ -95,7 +97,10 @@
         <div id="deviz"></div>
     </div>
 </section>
+    
+
     <footer>
+        
         <div id="foot">
         <ul class="social-links">
             <li><a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our facebook page(opens on a new tab)"><i class="fab fa-facebook-square"></i></a></li>
