Add what people say section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Lamad Tailors | Home </title>
 </head>
+
+<a name="top" ></a>
 <body>
  <header>
     <div id="container">
@@ -77,6 +79,31 @@
         </div>
     </div>
  </section> 
+ <section id="sayings">
+   <div class="content">
+    <h2>What people say about us</h2>
+    <div class="persons" id="person1">
+        <img src="assets/images/person1.jpg" alt="customer1">
+        <span>Love this place! Know that when I bring something in for alterations, it will look and fit great!</span>
+        <span class="customer">Catherin Eden</span>
+    </div>
+    <div class="persons" id="person2">
+        <img src="assets/images/person2.jpg" alt="customer2">
+        <span>Referred by a friend, their craftsmanship is impeccable!! I highly recommend...</span>
+        <span class="customer">Julie Kim</span>
+    </div>
+    <div class="persons" id="person3">
+        <img src="assets/images/person3.jpg" alt="customer3">
+        <span>Wonderful staff and phenominal work! I just can't stop praising their excellence and craftsmanship.</span>
+        <span class="customer">Kim Uthiek</span>
+    </div>
+    <div class="persons" id="person4">
+        <img src="assets/images/person4.jpg" alt="customer4">
+        <span>Love this place! Know that when I bring something in for alterations, it will look and fit great!</span>
+        <span class="customer">Catherin Eden</span>
+    </div>   
+   </div>
+ </section>
  <section id="about-us">
     <div class="content">
         <div id="times">
@@ -111,7 +138,7 @@
         <p>copyright &copy; Lamad Tailors 2022.</p>
        </div>
     </footer>
-
+    <a href="#" id="top"><span class="move_to_top"><i class="fas fa-caret-up"></i></span></a>
     <!-- fontawesome  -->
     <script src="https://kit.fontawesome.com/9273c684b9.js"></script>   
 </body>
