--- a/about.html
+++ b/about.html
@@ -32,6 +32,7 @@
         </nav>
     </div>
  </header>
+ <a name="top" ></a>
  <section id="main-image">
     <div id="tailor-image"></div>
     
@@ -50,7 +51,7 @@
         <p>copyright &copy; Lamad Tailors 2022.</p>
        </div>
     </footer>
-
+    <a href="#" id="top"><span class="move_to_top"><i class="fas fa-caret-up"></i></span></a>
     <!-- fontawesome  -->
     <script src="https://kit.fontawesome.com/9273c684b9.js"></script>   
 </body>
