--- a/contact.html
+++ b/contact.html
@@ -33,8 +33,7 @@
             </nav>
         </div>
     </header>
-    <a href="#top" id="top"><span class="move_to_top"><i class="fas fa-caret-up"></i></span></a>
-    <a name="top" id="off"></a>
+    <a name="top" ></a>
     <section class="tailor">
         <div id="contact-image"></div>
         <h1 id="info">Contact us</h1>
@@ -87,6 +86,7 @@
         <p>copyright &copy; Lamad Tailors 2022.</p>
     </div>
     </footer>
+    <a href="#" id="top"><span class="move_to_top"><i class="fas fa-caret-up"></i></span></a>
      <!-- fontawesome  -->
  <script src="https://kit.fontawesome.com/9273c684b9.js"></script>   
 </body>
