Add contrast colours for better visibility

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,7 +12,7 @@
     <title>Lamad Tailors | Home </title>
 </head>
 
-<a name="top" ></a>
+<a name="top" id="off"qqq></a>
 <body>
  <header>
     <div id="container">
