Add styles to about page and sayings section to home page

--- a/about.html
+++ b/about.html
@@ -35,10 +35,33 @@
  <a name="top" ></a>
  <section id="main-image">
     <div id="tailor-image"></div>
-    
+    <h1 id="info">About us</h1>
  </section>
  <section id="about">
-    about goes here.
+    <div class="content">
+        <h2>How we began</h2>
+        <div id="how-we-started">
+           <p>
+            The idea of having a Lamad tailors first appeared in the mind of a young lady who had for a long time searched in vain for a dress which would perfectly fit her. She decided therefore to start offering tailor made dresses for people for those in the same situation, ill served by the lady’s outfitters of the time. The enthusiastic response of her customers inspired the young entrepreneur to widen the services she offered to include tailor made suits, which until then many Irish,Ukrainian men and women had only been able to dream of. The next step was to seek for help hand from compatriots with similar skills .
+
+We have now been operating as leading tailors in Cahersiveen and its environs for 7 months and we owe our success to our belief in honesty and hard work.
+           </p> 
+             
+        </div>
+        <div id="group">
+         <!-- image goes here -->
+         <!-- <img src="assets/images/group.jpg" alt="group of tailors cheering"> -->
+        </div>
+    </div>
+ </section>
+ <section id="newsletter">
+    <div id="news">
+        <h3>NewsLetter</h3>
+        <form action="#" method="post">
+            <input type="text" name="email" id="email" placeholder="Enter your email here" required><br>
+            <button type="submit">subscribe</button>
+        </form>
+    </div>
  </section>
     <footer>
         <div id="foot">
@@ -48,7 +71,7 @@
             <li><a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our youtube page(opens on a new tab)"><i class="fab fa-youtube"></i></a></li>
             <li><a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our instagram page(opens on a new tab)"><i class="fab fa-instagram"></i></a></li>
         </ul>
-        <p>copyright &copy; Lamad Tailors 2022.</p>
+        <p>copyright &copy; Lamad Tailors 2022. All rights Reserved!</p>
        </div>
     </footer>
     <a href="#" id="top"><span class="move_to_top"><i class="fas fa-caret-up"></i></span></a>
