--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
         </nav>
     </div>
  </header>
- <a href="#top" id="top"><span class="move_to_top"><i class="fas fa-caret-up"></i></span></a>
  <a name="top" id="off"></a>
  <section id="main-image">
     <div id="tailor-image"></div>
@@ -84,25 +83,29 @@
    <div class="content">
     <h2>What people say about us</h2>
     <div class="persons" id="person1">
-        <img src="assets/images/person1.jpg" alt="customer1">
-        <span>Love this place! Know that when I bring something in for alterations, it will look and fit great!</span>
+        <div id="client1"></div>
+        <br>
+        <span>Love this place! Know that when I bring something in for alterations, it will look and fit great! Their services are excellent.</span>
         <span class="customer">Catherin Eden</span>
     </div>
     <div class="persons" id="person2">
-        <img src="assets/images/person2.jpg" alt="customer2">
-        <span>Referred by a friend, their craftsmanship is impeccable!! I highly recommend...</span>
+        <div id="client2"></div>
+        <br>
+        <span>I was referred by a friend, their craftsmanship is impeccable!! I highly recommend to any one that loves perfection.</span>
         <span class="customer">Julie Kim</span>
     </div>
     <div class="persons" id="person3">
-        <img src="assets/images/person3.jpg" alt="customer3">
+        <div id="client3"></div>
+        <br>
         <span>Wonderful staff and phenominal work! I just can't stop praising their excellence and craftsmanship.</span>
         <span class="customer">Kim Uthiek</span>
     </div>
     <div class="persons" id="person4">
-        <img src="assets/images/person4.jpg" alt="customer4">
-        <span>Love this place! Know that when I bring something in for alterations, it will look and fit great!</span>
+        <div id="client4"></div>
+        <br>
+        <span>Love this place! Know that when I bring something in for alterations, it will look and fit great! Their services are excellent.</span>
         <span class="customer">Catherin Eden</span>
-    </div>   
+    </div>    
    </div>
  </section>
  <section id="about-us">
@@ -136,7 +139,7 @@
             <li><a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our youtube page(opens on a new tab)"><i class="fab fa-youtube"></i></a></li>
             <li><a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our instagram page(opens on a new tab)"><i class="fab fa-instagram"></i></a></li>
         </ul>
-        <p>copyright &copy; Lamad Tailors 2022.</p>
+        <p>copyright &copy; Lamad Tailors 2022. All rights Reserved!</p>
        </div>
     </footer>
     <a href="#" id="top"><span class="move_to_top"><i class="fas fa-caret-up"></i></span></a>
