--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
     
         <div id="contact">
             <h2>Contact us</h2>
-            <p>Want to connect with Lamad Tailor? Please use the contact information below, or fill out our general inquiries form.</p>
+            <p>Want to connect with Lamad Tailor? Please use the contact information by the side, or contact by phone.</p>
             <p><i class="fas fa-envelope"></i> lamad@gmail.com</p>
             <p><i class="fas fa-mobile-alt"></i> 087-785-0472</p>
             <p><i class="fas fa-home"></i> Skellig Accommodation Center,V23 H729</p>
@@ -83,7 +83,7 @@
             <li><a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our youtube page(opens on a new tab)"><i class="fab fa-youtube"></i></a></li>
             <li><a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our instagram page(opens on a new tab)"><i class="fab fa-instagram"></i></a></li>
         </ul>
-        <p>copyright &copy; Lamad Tailors 2022.</p>
+        <p>copyright &copy; Lamad Tailors 2022. All rights Reserved!</p>
     </div>
     </footer>
     <a href="#" id="top"><span class="move_to_top"><i class="fas fa-caret-up"></i></span></a>
