Add services page structure

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="#">Services</a>
+                        <a href="services.html">Services</a>
                     </li>
                     <li>
                         <a href="contact.html" class="active">Contact</a>
@@ -36,7 +36,7 @@
     <a name="top" ></a>
     <section class="tailor">
         <div id="contact-image"></div>
-        <h1 id="info">Contact us</h1>
+        <h1 class="info">Contact us</h1>
     </section>
     <section id="contact-page">
         <div id="contact-form">
