--- a/services.html
+++ b/services.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,6 +11,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Lamad Tailors | Home </title>
 </head>
+
+<a name="top" id="off"qqq></a>
 <body>
  <header>
     <div id="container">
@@ -20,10 +23,10 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="about.html" class="active">About</a>
+                    <a href="about.html">About</a>
                 </li>
                 <li>
-                    <a href="services.html">Services</a>
+                    <a href="services.html" class="active">Services</a>
                 </li>
                 <li>
                     <a href="contact.html">Contact</a>
@@ -32,37 +35,30 @@
         </nav>
     </div>
  </header>
- <a name="top" ></a>
+ <a name="top" id="off"></a>
  <section id="main-image">
     <div id="tailor-image"></div>
-    <h1 class="info">About us</h1>
+     <h1 class="info">Services</h1>
  </section>
- <section id="about">
-    <div class="content">
-        <h2>How we began</h2>
-        <div id="how-we-started">
-           <p>
-            The idea of having a Lamad tailors first appeared in the mind of a young lady who had for a long time searched in vain for a dress which would perfectly fit her. She decided therefore to start offering tailor made dresses for people for those in the same situation, ill served by the lady’s outfitters of the time. The enthusiastic response of her customers inspired the young entrepreneur to widen the services she offered to include tailor made suits, which until then many Irish,Ukrainian men and women had only been able to dream of. The next step was to seek for help hand from compatriots with similar skills .
 
-We have now been operating as leading tailors in Cahersiveen and its environs for 7 months and we owe our success to our belief in honesty and hard work.
-           </p> 
-             
+    <section id="service">
+        <div class="content">
+            <div id="wedding-dress">
+                <h3 class="title">Wedding dress</h3>
+            </div>
+            <div id="prom-dress">
+                <h3 class="title">Prom dress</h3>
+            </div>
+            <div id="pageant-dress">
+                <h3 class="title">Pageant dress</h3>
+            </div>
+            <div id="suits">
+                <h3 class="title">Men's suit</h3>
+            </div>
         </div>
-        <div id="group">
-         <!-- image goes here -->
-         <!-- <img src="assets/images/group.jpg" alt="group of tailors cheering"> -->
-        </div>
-    </div>
- </section>
- <section id="newsletter">
-    <div id="news">
-        <h3>NewsLetter</h3>
-        <form action="#" method="post">
-            <input type="text" name="email" id="email" placeholder="Enter your email here" required><br>
-            <button type="submit">subscribe</button>
-        </form>
-    </div>
- </section>
+        <div id="our-services"></div>
+    </section>
+
     <footer>
         <div id="foot">
         <ul class="social-links">
