--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a href="about.html">About</a>
                 </li>
                 <li>
-                    <a href="#">Services</a>
+                    <a href="services.html">Services</a>
                 </li>
                 <li>
                     <a href="contact.html">Contact</a>
