Add services page structure and styles

--- a/services.html
+++ b/services.html
@@ -42,7 +42,7 @@
  </section>
 
     <section id="service">
-        <div class="content">
+        <div id="dress-type">
             <div id="wedding-dress">
                 <h3 class="title">Wedding dress</h3>
             </div>
