Add style and content to services page

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="lamad tailors,tailoring,clothe alterations">
     <link rel="shortcut icon" href="assets/images/lamad-website-favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Lamad Tailors | Home </title>
+    <title>Lamad Tailors | About </title>
 </head>
 <body>
  <header>
