--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </div>    
    </div>
  </section>
- <section id="about-us">
+ <section id="buisness-hours">
     <div class="content">
         <div id="times">
             <h2>Working hours:</h2>
