--- a/services.html
+++ b/services.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="lamad tailors,tailoring,clothe alterations">
     <link rel="shortcut icon" href="assets/images/lamad-website-favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Lamad Tailors | Home </title>
+    <title>Lamad Tailors | Services </title>
 </head>
 
 <a name="top" id="off"qqq></a>
@@ -56,9 +56,61 @@
                 <h3 class="title">Men's suit</h3>
             </div>
         </div>
-        <div id="our-services"></div>
+        <div id="our-services">
+            <!-- <h2>Our Services</h2> -->
+            <div class="content">
+                <div id="newly-married">
+                    <img src="assets/images/men_suit.jpg" alt="newly married couples">
+                </div>
+                <div id="service-details">
+                    <div class="accordion">
+                       <div>
+                        <input type="checkbox" id="alteration" class="accordion__input">
+                        <label for="alteration" class="accordion__label"> When should I schedule my alteration?</label>
+                        <div class="accordion-content">
+                            <p>Schedule your first bridal alteration 8-12 weeks prior to your wedding day. 
+                            This gives you plenty of time for a second fitting and also any changes you may desire prior to your special day.</p>
+                        </div>
+                       </div>
+                    </div>
+                    <div class="accordion">
+                        <div>
+                         <input type="checkbox" id="how" class="accordion__input">
+                         <label for="how" class="accordion__label">How long will it take to alter my dress?</label>
+                         <div class="accordion-content">
+                             <p>The total process can take several weeks, sometimes longer during the busiest times of wedding season (March-June).
+                                 With an average of 2 fittings, this can span 6-8 weeks. Dresses requiring more extensive alterations like straps, 
+                                 bust, hips, bustle, etc will take longer. A hem, for example may take only 1 week. Rush option is available for last minute alterations. 
+                                We try our very best to accommodate every bride.</p>
+                         </div>
+                        </div>
+                     </div>
+                     <div class="accordion">
+                        <div>
+                         <input type="checkbox" id="cost" class="accordion__input">
+                         <label for="cost" class="accordion__label">How much do alterations cost?</label>
+                         <div class="accordion-content">
+                             <p>Depending on what you need done to your dress, alteration fees can be as nominal as $100, to well over $1000. 
+                                Every dress and every woman is unique, in order to give you the most accurate price we encourage you to come in for your complimentary consultation.</p>
+                         </div>
+                        </div>
+                     </div>
+                     <div class="accordion">
+                        <div>
+                         <input type="checkbox" id="fittings" class="accordion__input">
+                         <label for="fittings" class="accordion__label"> How much do you charge for fittings?</label>
+                         <div class="accordion-content">
+                             <p>We love our customers so much we offer complimentary consultations and fittings.</p>
+                         </div>
+                        </div>
+                     </div>
+                    
+                </div>
+                
+            </div>
+        </div>
     </section>
-
+    <hr>
     <footer>
         <div id="foot">
         <ul class="social-links">
