Add alt image attributes to images on site

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
  </header>
  <a name="top" ></a>
  <section id="main-image">
-    <div id="tailor-image"></div>
+    <div id="tailor-image" role="img" aria-label="lady with a sewing machine"></div>
     <h1 class="info">About us</h1>
  </section>
  <section id="about">
@@ -48,7 +48,7 @@ We have now been operating as leading tailors in Cahersiveen and its environs fo
            </p> 
              
         </div>
-        <div id="group">
+        <div id="group" role="img" aria-label="group of tailors cheering" title="group of tailors cheering">
          <!-- image goes here -->
          <!-- <img src="assets/images/group.jpg" alt="group of tailors cheering"> -->
         </div>
