--- a/services.html
+++ b/services.html
@@ -37,13 +37,13 @@
  </header>
  <a name="top" id="off"></a>
  <section id="main-image">
-    <div id="tailor-image"></div>
+    <div id="tailor-image" role="img" aria-label="lady with a sewing machine" title="lady with a sewing machine"></div>
      <h1 class="info">Services</h1>
  </section>
 
     <section id="service">
         <div id="dress-type">
-            <div id="wedding-dress">
+            <div id="wedding-dress" role="img" aria-label="image of a lady in wedding dress" title="image of a lady in wedding dress">
                 <h3 class="title">Wedding dress</h3>
             </div>
             <div id="prom-dress">
