--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
  </header>
  <a name="top" id="off"></a>
  <section id="main-image">
-    <div id="tailor-image"></div>
+    <div id="tailor-image" role="img" aria-label="lady with a sewing machine" title="lady with a sewing machine"></div>
     <div id="welcome">
         <h1>Welcome</h1>
        <div class="mytext">
@@ -83,22 +83,22 @@
    <div class="content">
     <h2>What people say about us</h2>
     <div class="persons" id="person1">
-        <div id="client1"></div>
+        <div id="client1" role="img" aria-label="image of Catherin Eden" title="Catherine Eden"></div>
         <div>Love this place! Know that when I bring something in for alterations, it will look and fit great! Their services are excellent.</div>
         <div class="customer">Catherin Eden</div>
     </div>
     <div class="persons" id="person2">
-        <div id="client2"></div>
+        <div id="client2" role="img" aria-label="image of Kelly Hampstire" title="image of Kelly Hampstire"></div>
         <div>I was referred by a friend, their craftsmanship is impeccable!! I highly recommend to any one that loves perfection.</div>
         <div class="customer">Kelly Hampstire</div>
     </div>
     <div class="persons" id="person3">
-        <div id="client3"></div>
+        <div id="client3" role="img" aria-label="image of Kim Uthiek" title="image of Kim Uthiek"></div>
         <div>Wonderful staff and phenominal work! I just can't stop praising their excellence and craftsmanship.</div>
         <div class="customer">Kim Uthiek</div>
     </div>
     <div class="persons" id="person4">
-        <div id="client4"></div>
+        <div id="client4" role="img" aria-label="image of Josephine Dowen" title="image of Josephine Dowen"></div>
         <div>Love this place! Know that when I bring something in for alterations, it will look and fit great! Their services are excellent.</div>
         <div class="customer">Josephine Dowen</div>
     </div>    
@@ -117,7 +117,7 @@
             <p>Appointment required for bridal, formal and pageant clients.</p>
         </div>
         </div>
-        <div id="deviz"></div>
+        <div id="deviz" role="img" aria-label="lamad logo image" title="lamad logo image"></div>
     </div>
 </section>
     
