Add contrasting color to header

--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@ We have now been operating as leading tailors in Cahersiveen and its environs fo
  <section id="newsletter">
     <div id="news">
         <h3>NewsLetter</h3>
-        <form action="#" method="post">
+        <form action="https://formdump.codeinstitute.net" method="post">
             <input type="text" name="email" id="email" placeholder="Enter your email here" required><br>
             <button type="submit">subscribe</button>
         </form>
@@ -76,6 +76,6 @@ We have now been operating as leading tailors in Cahersiveen and its environs fo
     </footer>
     <a href="#" id="top"><span class="move_to_top"><i class="fas fa-caret-up"></i></span></a>
     <!-- fontawesome  -->
-    <script src="https://kit.fontawesome.com/9273c684b9.js"></script>   
+    <script src="https://kit.fontawesome.com/9273c684b9.js" crossorigin="anonymous"></script>   
 </body>
 </html>
