--- a/index.html
+++ b/index.html
@@ -135,6 +135,6 @@
 </footer>
     <a href="#" id="top"><span class="move_to_top"><i class="fas fa-caret-up"></i></span></a>
     <!-- fontawesome  -->
-    <script src="https://kit.fontawesome.com/9273c684b9.js"></script>   
+    <script src="https://kit.fontawesome.com/9273c684b9.js" crossorigin="anonymous"></script>  
 </body>
 </html>
