--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
     </section>
     <section id="contact-page">
         <div id="contact-form">
-            <form action="#" method="post">
+            <form action="https://formdump.codeinstitute.net" method="post">
                 <label for="name">Name:</label>
                 <br>
                 <input type="text" name="name" id="name" class="text-input">
@@ -88,6 +88,6 @@
     </footer>
     <a href="#" id="top"><span class="move_to_top"><i class="fas fa-caret-up"></i></span></a>
      <!-- fontawesome  -->
- <script src="https://kit.fontawesome.com/9273c684b9.js"></script>   
+     <script src="https://kit.fontawesome.com/9273c684b9.js" crossorigin="anonymous"></script>   
 </body>
 </html>
