Add media query to services page

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 <body>
  <header>
     <div id="container">
-        <a href="index.html" id="logo"><img src="assets/images/lamad.png" alt="lamad logo image"></a>
+        <a href="index.html" id="logo"><img src="assets/images/lamad.webp" alt="lamad logo image" width="250" height="62"></a>
         <nav>
             <ul>
                 <li>
