--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <header>
         <div id="container">
             <!-- logo image got from app.logo.com -->
-            <a href="index.html" id="logo"><img src="assets/images/lamad.png" alt="lamad logo"></a>
+            <a href="index.html" id="logo"><img src="assets/images/lamad.webp" alt="lamad logo image" width="250" height="62"></a>
             <nav>
                 <ul>
                     <li>
@@ -63,7 +63,7 @@
     
         <div id="contact">
             <h2>Contact us</h2>
-            <p>Want to connect with Lamad Tailor? Please use the contact information by the side, or contact by phone.</p>
+            <p>Want to connect with Lamad Tailor? Please use the contact form, or contact us by phone.</p>
             <p><i class="fas fa-envelope"></i> lamad@gmail.com</p>
             <p><i class="fas fa-mobile-alt"></i> 087-785-0472</p>
             <p><i class="fas fa-home"></i> Skellig Accommodation Center,V23 H729</p>
@@ -72,7 +72,7 @@
  
        <section id="map">
         <div id="map-wrapper">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2459.2640832509846!2d-10.228465123398758!3d51.947375571916716!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x484ff31ceb50d033%3A0xbf4459f40fc381a4!2sSkellig%20Accommodation%20Centre!5e0!3m2!1sen!2sie!4v1670701740436!5m2!1sen!2sie" width="100%" height="710" style="border:0;" allowfullscreen ></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2459.2640832509846!2d-10.228465123398758!3d51.947375571916716!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x484ff31ceb50d033%3A0xbf4459f40fc381a4!2sSkellig%20Accommodation%20Centre!5e0!3m2!1sen!2sie!4v1670701740436!5m2!1sen!2sie" title="Lamad tailors Cahersiveen" width="100%" height="710" style="border:0;" allowfullscreen ></iframe>
         </div>
        </section>
     <footer>
