--- a/services.html
+++ b/services.html
@@ -16,7 +16,7 @@
 <body>
  <header>
     <div id="container">
-        <a href="index.html" id="logo"><img src="assets/images/lamad.png" alt="lamad logo image"></a>
+        <a href="index.html" id="logo"><img src="assets/images/lamad.webp" alt="lamad logo image" width="250" height="62"></a>
         <nav>
             <ul>
                 <li>
@@ -60,13 +60,13 @@
             <!-- <h2>Our Services</h2> -->
             <div class="content">
                 <div id="newly-married">
-                    <img src="assets/images/men_suit.jpg" alt="newly married couples">
+                    <img src="assets/images/men_suit.webp" alt="newly married couples" width="400" height="268">
                 </div>
                 <div id="service-details">
                     <div class="accordion">
                        <div>
-                        <input type="checkbox" id="alteration" class="accordion__input">
-                        <label for="alteration" class="accordion__label"> When should I schedule my alteration?</label>
+                        <input type="checkbox" id="alteration" class="accordion-input">
+                        <label for="alteration" class="accordion-label"> When should I schedule my alteration?</label>
                         <div class="accordion-content">
                             <p>Schedule your first bridal alteration 8-12 weeks prior to your wedding day. 
                             This gives you plenty of time for a second fitting and also any changes you may desire prior to your special day.</p>
@@ -75,8 +75,8 @@
                     </div>
                     <div class="accordion">
                         <div>
-                         <input type="checkbox" id="how" class="accordion__input">
-                         <label for="how" class="accordion__label">How long will it take to alter my dress?</label>
+                         <input type="checkbox" id="how" class="accordion-input">
+                         <label for="how" class="accordion-label">How long will it take to alter my dress?</label>
                          <div class="accordion-content">
                              <p>The total process can take several weeks, sometimes longer during the busiest times of wedding season (March-June).
                                  With an average of 2 fittings, this can span 6-8 weeks. Dresses requiring more extensive alterations like straps, 
@@ -87,8 +87,8 @@
                      </div>
                      <div class="accordion">
                         <div>
-                         <input type="checkbox" id="cost" class="accordion__input">
-                         <label for="cost" class="accordion__label">How much do alterations cost?</label>
+                         <input type="checkbox" id="cost" class="accordion-input">
+                         <label for="cost" class="accordion-label">How much do alterations cost?</label>
                          <div class="accordion-content">
                              <p>Depending on what you need done to your dress, alteration fees can be as nominal as $100, to well over $1000. 
                                 Every dress and every woman is unique, in order to give you the most accurate price we encourage you to come in for your complimentary consultation.</p>
@@ -97,8 +97,8 @@
                      </div>
                      <div class="accordion">
                         <div>
-                         <input type="checkbox" id="fittings" class="accordion__input">
-                         <label for="fittings" class="accordion__label"> How much do you charge for fittings?</label>
+                         <input type="checkbox" id="fittings" class="accordion-input">
+                         <label for="fittings" class="accordion-label"> How much do you charge for fittings?</label>
                          <div class="accordion-content">
                              <p>We love our customers so much we offer complimentary consultations and fittings.</p>
                          </div>
