Add content partially to readme file

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
         </nav>
     </div>
  </header>
- <a name="top" ></a>
+ <a href="#" id="off" ></a>
  <section id="main-image">
     <div id="tailor-image" role="img" aria-label="lady with a sewing machine"></div>
     <h1 class="info">About us</h1>
