--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
             </nav>
         </div>
     </header>
-    <a name="top" ></a>
+    <a href="#" id="off" ></a>
     <section class="tailor">
         <div id="contact-image"></div>
         <h1 class="info">Contact us</h1>
@@ -72,7 +72,8 @@
  
        <section id="map">
         <div id="map-wrapper">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2459.2640832509846!2d-10.228465123398758!3d51.947375571916716!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x484ff31ceb50d033%3A0xbf4459f40fc381a4!2sSkellig%20Accommodation%20Centre!5e0!3m2!1sen!2sie!4v1670701740436!5m2!1sen!2sie" title="Lamad tailors Cahersiveen" width="100%" height="710" style="border:0;" allowfullscreen ></iframe>
+            <h2>Our Location</h2>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2459.2640832509846!2d-10.228465123398758!3d51.947375571916716!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x484ff31ceb50d033%3A0xbf4459f40fc381a4!2sSkellig%20Accommodation%20Centre!5e0!3m2!1sen!2sie!4v1670701740436!5m2!1sen!2sie" title="Lamad tailors Cahersiveen" allowfullscreen ></iframe>
         </div>
        </section>
     <footer>
