--- a/services.html
+++ b/services.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,7 +11,6 @@
     <title>Lamad Tailors | Services </title>
 </head>
 
-<a name="top" id="off"qqq></a>
 <body>
  <header>
     <div id="container">
@@ -35,7 +33,7 @@
         </nav>
     </div>
  </header>
- <a name="top" id="off"></a>
+ <a href="#" id="off" ></a>
  <section id="main-image">
     <div id="tailor-image" role="img" aria-label="lady with a sewing machine" title="lady with a sewing machine"></div>
      <h1 class="info">Services</h1>
