Add accessibility attributes to logo image

--- a/about.html
+++ b/about.html
@@ -13,7 +13,9 @@
 <body>
  <header>
     <div id="container">
-        <a href="index.html" id="logo"><img src="assets/images/lamad.webp" alt="lamad logo image" width="300" height="74"></a>
+        <div id="logo-container" role="img" aria-label="Lamad logo image" title="Lamad logo image">
+            <a href="index.html" id="logo"><img src="assets/images/lamad.webp" alt="lamad logo image" width="300" height="74"></a>
+            </div>
         <nav>
             <ul>
                 <li>
@@ -50,7 +52,7 @@ We have now been operating as leading tailors in Cahersiveen and its environs fo
         </div>
         <div id="group" role="img" aria-label="group of tailors cheering" title="group of tailors cheering">
          <!-- image goes here -->
-         <!-- <img src="assets/images/group.jpg" alt="group of tailors cheering"> -->
+         <img src="assets/images/group.jpg" alt="group of tailors cheering" width="400" height="268">
         </div>
     </div>
  </section>
@@ -74,7 +76,7 @@ We have now been operating as leading tailors in Cahersiveen and its environs fo
         <p>copyright &copy; Lamad Tailors 2022. All rights Reserved!</p>
        </div>
     </footer>
-    <a href="#" id="top"><span class="move_to_top"><i class="fas fa-caret-up"></i></span></a>
+    <a href="#" id="to-top" aria-label="move to top of page"><span class="move_to_top"><i class="fas fa-caret-up"></i></span></a>
     <!-- fontawesome  -->
     <script src="https://kit.fontawesome.com/9273c684b9.js" crossorigin="anonymous"></script>   
 </body>
