--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <body>
  <header>
     <div id="container">
-        <a href="index.html" id="logo"><img src="assets/images/lamad.webp" alt="lamad logo image" width="300" height="75"></a>
+        <div id="logo-container" role="img" aria-label="Lamad logo image" title="Lamad logo image">
+        <a href="index.html" id="logo"><img src="assets/images/lamad.webp" alt="lamad logo image" width="300" height="74"></a>
+        </div>
         <nav>
             <ul>
                 <li>
@@ -133,7 +135,7 @@
         <p>copyright &copy; Lamad Tailors 2022. All rights Reserved!</p>
        </div>
 </footer>
-    <a href="#" id="top"><span class="move_to_top"><i class="fas fa-caret-up"></i></span></a>
+    <a href="#" id="to-top" aria-label="move to top of page"><span class="move_to_top"><i class="fas fa-caret-up"></i></span></a>
     <!-- fontawesome  -->
     <script src="https://kit.fontawesome.com/9273c684b9.js" crossorigin="anonymous"></script>  
 </body>
