--- a/services.html
+++ b/services.html
@@ -14,7 +14,9 @@
 <body>
  <header>
     <div id="container">
-        <a href="index.html" id="logo"><img src="assets/images/lamad.webp" alt="lamad logo image" width="300" height="74"></a>
+        <div id="logo-container" role="img" aria-label="Lamad logo image" title="Lamad logo image">
+            <a href="index.html" id="logo"><img src="assets/images/lamad.webp" alt="lamad logo image" width="300" height="74"></a>
+        </div>
         <nav>
             <ul>
                 <li>
@@ -42,10 +44,10 @@
     <section id="service">
         <div id="dress-type">
             <div id="wedding-dress" role="img" aria-label="image of a lady in wedding dress" title="image of a lady in wedding dress">
-                <h3 class="title">Wedding dress</h3>
+                <h2 class="title">Wedding dress</h2>
             </div>
             <div id="prom-dress">
-                <h3 class="title">Prom dress</h3>
+                <h2 class="title">Prom dress</h2>
             </div>
             <div id="pageant-dress">
                 <h3 class="title">Pageant dress</h3>
@@ -57,7 +59,7 @@
         <div id="our-services">
             <!-- <h2>Our Services</h2> -->
             <div class="content">
-                <div id="newly-married">
+                <div id="newly-married" role="img" aria-label="newly married couples" title="newly married couples">
                     <img src="assets/images/men_suit.webp" alt="newly married couples" width="400" height="268">
                 </div>
                 <div id="service-details">
@@ -120,7 +122,7 @@
         <p>copyright &copy; Lamad Tailors 2022. All rights Reserved!</p>
        </div>
     </footer>
-    <a href="#" id="top"><span class="move_to_top"><i class="fas fa-caret-up"></i></span></a>
+    <a href="#" id="to-top" aria-label="move to top of page"><span class="move_to_top"><i class="fas fa-caret-up"></i></span></a>
     <!-- fontawesome  -->
     <script src="https://kit.fontawesome.com/9273c684b9.js" crossorigin="anonymous"></script>  
 </body>
