Add media query to service page

--- a/about.html
+++ b/about.html
@@ -36,7 +36,9 @@
  </header>
  <a href="#" id="off" ></a>
  <section id="main-image">
-    <div id="tailor-image" role="img" aria-label="lady with a sewing machine"></div>
+    <div id="tailor-image" role="img" aria-label="lady with a sewing machine" title="lady with a sewing machine">
+        <img src="assets/images/tailor.webp" alt="lady with a sewing machine" width="1000" height="668">
+    </div>
     <h1 class="info">About us</h1>
  </section>
  <section id="about">
@@ -52,7 +54,7 @@ We have now been operating as leading tailors in Cahersiveen and its environs fo
         </div>
         <div id="group" role="img" aria-label="group of tailors cheering" title="group of tailors cheering">
          <!-- image goes here -->
-         <img src="assets/images/group.jpg" alt="group of tailors cheering" width="400" height="268">
+         <img src="assets/images/group.webp" alt="group of tailors cheering" width="400" height="268">
         </div>
     </div>
  </section>
