--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
  </header>
  <a href="#" id="off"></a>
  <section id="main-image">
-    <div id="tailor-image" role="img" aria-label="lady with a sewing machine" title="lady with a sewing machine"></div>
+    <div id="tailor-image" role="img" aria-label="lady with a sewing machine" title="lady with a sewing machine">
+        <img src="assets/images/tailor.webp" alt="lady with a sewing machine" width="1000" height="668">
+    </div>
     <div id="welcome">
         <h1>Welcome</h1>
        <div class="mytext">
