--- a/services.html
+++ b/services.html
@@ -37,7 +37,9 @@
  </header>
  <a href="#" id="off" ></a>
  <section id="main-image">
-    <div id="tailor-image" role="img" aria-label="lady with a sewing machine" title="lady with a sewing machine"></div>
+    <div id="tailor-image" role="img" aria-label="lady with a sewing machine" title="lady with a sewing machine">
+        <img src="assets/images/tailor.webp" alt="lady with a sewing machine" width="1000" height="668">
+    </div>
      <h1 class="info">Services</h1>
  </section>
 
@@ -110,7 +112,6 @@
             </div>
         </div>
     </section>
-    <hr>
     <footer>
         <div id="foot">
         <ul class="social-links">
