--- a/contact.html
+++ b/contact.html
@@ -36,8 +36,10 @@
         </div>
     </header>
     <a href="#" id="off" ></a>
-    <section class="tailor">
-        <div id="contact-image"></div>
+    <section id="main-image">
+        <div id="tailor-image" role="img" aria-label="lady with a sewing machine" title="lady with a sewing machine">
+            <img src="assets/images/tailor.webp" alt="lady with a sewing machine" width="1000" height="668">
+        </div>
         <h1 class="info">Contact us</h1>
     </section>
     <section id="contact-page">
