Add styles to about page

--- a/services.html
+++ b/services.html
@@ -48,13 +48,13 @@
             <div id="wedding-dress" role="img" aria-label="image of a lady in wedding dress" title="image of a lady in wedding dress">
                 <h2 class="title">Wedding dress</h2>
             </div>
-            <div id="prom-dress">
+            <div id="prom-dress" role="img" aria-label="image of a lady in prom dress" title="image of a lady in prom dress">
                 <h2 class="title">Prom dress</h2>
             </div>
-            <div id="pageant-dress">
+            <div id="pageant-dress" role="img" aria-label="image of a lady in pageant dress" title="image of a lady in pageant dress">
                 <h3 class="title">Pageant dress</h3>
             </div>
-            <div id="suits">
+            <div id="suits" role="img" aria-label="image of a man with his bride in a suit" title="image of a man with his bride in a suit">
                 <h3 class="title">Men's suit</h3>
             </div>
         </div>
