--- a/contact.html
+++ b/contact.html
@@ -47,19 +47,19 @@
             <form action="https://formdump.codeinstitute.net" method="post">
                 <label for="name">Name:</label>
                 <br>
-                <input type="text" name="name" id="name" class="text-input">
+                <input type="text" name="name" id="name" class="text-input" required>
                 <br>
                 <label for="phone">Phone:</label>
                 <br>
-                <input type="text" name="phone" id="phone" required class="text-input">
+                <input type="text" name="phone" id="phone"  class="text-input" required>
                 <br>
                 <label for="email">Email:</label>
                 <br>
-                <input type="email" name="email" id="email" class="text-input">
+                <input type="email" name="email" id="email" class="text-input" required>
                 <br>
                 <label for="message">Message:</label>
                 <br>
-                <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                <textarea name="message" id="message" cols="30" rows="10" required></textarea>
                 <br>
                 <input type="submit" value="Send" class="btn">
             </form>
