Add screen display to readme file.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
             </ul>
         </nav>
     </div>
+    <!-- <div id="preloader">
+        <img src="https://dee68-milestoneproject-4v3mo2dgnrl.ws-eu79.gitpod.io/assets/images/tailor.webp" alt="lady with a sewing machine" width="1000" height="668">
+        <img src="https://dee68-milestoneproject-4v3mo2dgnrl.ws-eu79.gitpod.io/assets/images/lamad.webp" alt="Lamad logo image" width="300" height="74">
+        <img src="https://dee68-milestoneproject-4v3mo2dgnrl.ws-eu79.gitpod.io/assets/images/person1.webp" alt="" width="500" height="334">
+        <img src="https://dee68-milestoneproject-4v3mo2dgnrl.ws-eu79.gitpod.io/assets/images/person2.webp" alt="" width="500" height="334">
+        <img src="https://dee68-milestoneproject-4v3mo2dgnrl.ws-eu79.gitpod.io/assets/images/person3.webp" alt="" width="500" height="334">
+        <img src="https://dee68-milestoneproject-4v3mo2dgnrl.ws-eu79.gitpod.io/assets/images/person4.webp" alt="" width="500" height="334">
+        <a href="https://dee68-milestoneproject-4v3mo2dgnrl.ws-eu79.gitpod.io/assets/css/style.css"></a>
+    
+    </div> -->
  </header>
  <a href="#" id="off"></a>
  <section id="main-image">
