Add a new folder for readme file.

--- a/index.html
+++ b/index.html
@@ -34,16 +34,6 @@
             </ul>
         </nav>
     </div>
-    <!-- <div id="preloader">
-        <img src="https://dee68-milestoneproject-4v3mo2dgnrl.ws-eu79.gitpod.io/assets/images/tailor.webp" alt="lady with a sewing machine" width="1000" height="668">
-        <img src="https://dee68-milestoneproject-4v3mo2dgnrl.ws-eu79.gitpod.io/assets/images/lamad.webp" alt="Lamad logo image" width="300" height="74">
-        <img src="https://dee68-milestoneproject-4v3mo2dgnrl.ws-eu79.gitpod.io/assets/images/person1.webp" alt="" width="500" height="334">
-        <img src="https://dee68-milestoneproject-4v3mo2dgnrl.ws-eu79.gitpod.io/assets/images/person2.webp" alt="" width="500" height="334">
-        <img src="https://dee68-milestoneproject-4v3mo2dgnrl.ws-eu79.gitpod.io/assets/images/person3.webp" alt="" width="500" height="334">
-        <img src="https://dee68-milestoneproject-4v3mo2dgnrl.ws-eu79.gitpod.io/assets/images/person4.webp" alt="" width="500" height="334">
-        <a href="https://dee68-milestoneproject-4v3mo2dgnrl.ws-eu79.gitpod.io/assets/css/style.css"></a>
-    
-    </div> -->
  </header>
  <a href="#" id="off"></a>
  <section id="main-image">
@@ -144,7 +134,9 @@
             <li><a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our youtube page(opens on a new tab)"><i class="fab fa-youtube"></i></a></li>
             <li><a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our instagram page(opens on a new tab)"><i class="fab fa-instagram"></i></a></li>
         </ul>
+        <div id="copy">
         <p>copyright &copy; Lamad Tailors 2022. All rights Reserved!</p>
+        </div>
        </div>
 </footer>
     <a href="#" id="to-top" aria-label="move to top of page"><span class="move_to_top"><i class="fas fa-caret-up"></i></span></a>
