--- a/services.html
+++ b/services.html
@@ -120,7 +120,9 @@
             <li><a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our youtube page(opens on a new tab)"><i class="fab fa-youtube"></i></a></li>
             <li><a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our instagram page(opens on a new tab)"><i class="fab fa-instagram"></i></a></li>
         </ul>
-        <p>copyright &copy; Lamad Tailors 2022. All rights Reserved!</p>
+        <div id="copy">
+            <p>copyright &copy; Lamad Tailors 2022. All rights Reserved!</p>
+            </div>
        </div>
     </footer>
     <a href="#" id="to-top" aria-label="move to top of page"><span class="move_to_top"><i class="fas fa-caret-up"></i></span></a>
