Add style to accordion element.

--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@ We have now been operating as leading tailors in Cahersiveen and its environs fo
     <div id="news">
         <h3>NewsLetter</h3>
         <form action="https://formdump.codeinstitute.net" method="post">
-            <input type="text" name="email" id="email" placeholder="Enter your email here" required><br>
+            <input type="email" name="email" id="email" placeholder="Enter your email here" required><br>
             <button type="submit">subscribe</button>
         </form>
     </div>
